<?xml version="1.0"?>
<package>
  <name>rt_interface_py</name>
  <version>0.2.3</version>
  <description>Rt Interface package</description>

  <maintainer email="inderjeet.y@greyorange.sg">Inderjeet Yadav</maintainer>
  <author email="inderjeet.y@greyorange.sg">Inderjeet Yadav</author>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>nav_msgs</build_depend>


  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>nav_msgs</run_depend>
  <!--  <run_depend>amcl</run_depend>-->


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
